# Team-Lineup

./: .env.example  .gitignore  .prompt-example  README.md  copilot-instructions.md  pyproject.toml
apps/core/: serializers.py  service.py
apps/core/api/: urls.py  views.py
apps/core/tests/: test_view.py
apps/events/: apps.py  models.py
apps/events/tests/: test_models.py
apps/players/: models.py
apps/players/tests/: test_models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: base.txt
