[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamlineup"
version = "0.1.0"
description = "A Django application for managing team lineups."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aberos" }]
dependencies = [
    "asgiref==3.11.1",
    "Django==6.0.5",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
    "djangorestframework",
    "drf-spectacular",
    "dj-db-conn-pool",
    "psycopg2-binary",
    "django-filter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.black]
line-length = 79
target-version = ["py312"]
exclude = "/migrations/"

[tool.ruff]
line-length = 79
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "D"]
ignore = ["D203", "D212", "D104", "D105", "D106", "D107", "D102"]

[tool.ruff.lint.per-file-ignores]
"**/admin.py" = ["D100", "D101"]
"**/apps.py" = ["D100", "D101"]
"**/tests.py" = ["D100"]
"**/tests/**/*.py" = ["D100", "D101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
exclude = ".*/migrations/.*"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "apps.*.tests.*",
    "conftest",
]
disallow_untyped_defs = false
warn_return_any = false